--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,10 +20,11 @@
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
+                <p class="copyright text-muted small">Copyright &copy; {{ site.title }}. All Rights Reserved</p>
             </div>
             <div class="col-md-4">
-                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
+                <p>Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.</p>
+				<p><a href="https://www.flickr.com/photos/wonkybutt/8289217137/">Photo</a> by Adam Gulkis. Used under CC-BY-NC license.</p>
             </div>
         </div>
     </div>
