--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -13,8 +13,12 @@
                     <h2 class="section-heading">{{ post.title }}</h2>
                     {{ post.description }}
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                <div class="col-lg-4 col-lg-offset-1 col-sm-6">
+                    {% if post.locations %}
+                        <img class="img-responsive" src="http://maps.googleapis.com/maps/api/staticmap?{% for location in post.locations %}{% if forloop.first %}center={{location}}&markers=color:red%7C{{location}}{% else %}&markers=color:red%7C{{location}}{% endif %}{% endfor %}&zoom={% if post.zoom %}{{post.zoom}}{% else %}13{% endif %}&size=600x400&scale=1&sensor=false&visual_refresh=true" alt="">
+                    {% else %}
+                        <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                    {% endif %}
                 </div>
             </div>
 
