removed sample posts

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -42,20 +42,17 @@ address {
     margin-bottom: 0px;
 }
 
-.navbar-brand {
-    width: 300px;
-    height: 80px;
+.navbar-toggle {
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
-.navbar-nav {
-    padding-top: 40px;
-}
 
 #navbar {
     background-color: #FFFFFF;
 }
 
-.brand {
+.navbar-brand img {
     background: url(../img/logo.png) no-repeat center center;
     width: 300px;
     height: 80px;
@@ -63,6 +60,23 @@ address {
     position: absolute;
     margin-bottom: 20px;
     padding-right: 20px;
+    padding-left: 40px;
+}
+
+@media (max-width: 767px) {
+    .navbar-brand img {
+        width: 180px;
+    }
+}
+
+.navbar-nav, .navbar-nav li, .navbar-nav li a {
+    height: 120px;
+    line-height: 120px;
+}
+
+.navbar-nav li a {
+    padding-top: 0;
+    padding-bottom:0;
 }
 
 .lead {
