--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,21 +2,21 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img class="brand hidden-sm" />
-                    <img class="brand visible-sm" />
-                </a>
-                <!-- <a class="navbar-brand" href="#">{{ site.title }}</a> -->
-            </div>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                <img class="brand hidden-sm" />
+                <img class="brand visible-sm" />
+            </a>
+            <!-- <a class="navbar-brand" href="#">{{ site.title }}</a> -->
+        </div>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-menu">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbar-collapse-menu">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#">About</a>
