--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img class="brand hidden-sm" />
-                <img class="brand visible-sm" />
+                <img class="brand img-responsive visible-sm" src="img/{{ site.logo }}"/>
+                <img class="brand img-responsive hidden-sm"  src="img/{{ site.logo }}"/>
             </a>
             <!-- <a class="navbar-brand" href="#">{{ site.title }}</a> -->
         </div>
