--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -53,19 +53,13 @@ address {
 }
 
 .navbar-brand img {
-    background: url(../img/logo.png) no-repeat center center;
-    width: 300px;
-    height: 80px;
-    background-size: 100%;
+    height: 75%;
     position: absolute;
-    margin-bottom: 20px;
-    padding-right: 20px;
-    padding-left: 40px;
 }
 
 @media (max-width: 767px) {
     .navbar-brand img {
-        width: 180px;
+        height: 50%;
     }
 }
 
