changed background of connect section to solid color

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -175,9 +175,10 @@ address {
 
 .banner {
     padding: 100px 0;
-    color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
-    background-size: cover;
+    color: #F8F8F8;
+    background: #005daa;
+    /* background: url(../img/banner-bg.jpg) no-repeat center center;
+    background-size: cover; */
 }
 
 .banner h2 {
